--- a/src/main/webapp/resources/css/home.css
+++ b/src/main/webapp/resources/css/home.css
@@ -149,7 +149,7 @@ img.book_img {
 
 a.btn_add_book, a.btn_bulk_book, button.btn_addBook, button.btn_editBook,
 	button.btn_deleteBook, button.btn_rentBook, button.btn_returnBook,
-	button.btn_bulkRegist {
+	button.btn_bulkRegist, a.btn_history {
 	display: inline-block;
 	font-size: 16px;
 	font-weight: bold;
@@ -185,6 +185,10 @@ button.btn_returnBook {
 }
 
 button.btn_bulkRegist {
+	background-color: #FF9966;
+}
+
+a.btn_history {
 	background-color: #FF9966;
 }
 
@@ -324,21 +328,20 @@ hr.border_add {
 	color: #fa8072;
 }
 
-.search{
-	display: flex; 
+.search {
+	display: flex;
 	justify-content: flex-end;
 }
 
-.addBotton{
+.addBotton {
 	margin-right: auto;
 }
 
-.radioBotton{
+.radioBotton {
 	margin: auto 0;
-	 padding: 20px;
+	padding: 20px;
 }
 
-.searchBotton{
+.searchBotton {
 	display: inline-flex
 }
-
